Update README to v1.1.0 with JitPack instructions